version/0.38/_sources/api/solver/_autosummary/settings/geometry_1.rst.txt
:orphan:

.. _geometry_1:

geometry
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.geometry_1
    :show-inheritance:

.. rubric:: Methods

============================================   =====================================================

Method                                                                                       Summary

============================================   =====================================================
:ref:`create <create>`                             Create a new instance of the current object type.

:ref:`delete <delete>`                                                      Delete selected objects.

:ref:`rename <rename>`                                                            Rename the object.

:ref:`list_1 <list_1>`                                                List the names of the objects.

:ref:`list_properties_1 <list_properties_1>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                        Create a copy of the object.

============================================   =====================================================

.. rubric:: Named object type

:ref:`geometry_1_child <geometry_1_child>`


.. rubric:: Included in:

==================   ==========================================================================================================

Parent                                                                                                                  Summary

==================   ==========================================================================================================
:ref:`mesh <mesh>`       Provides access to mesh operations such as generation, transformation, repair, import/export and more.

==================   ==========================================================================================================

